v0.14.0/_sources/tutorials/advanced/earth_relief.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/advanced/earth_relief.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_tutorials_advanced_earth_relief.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_advanced_earth_relief.py:


Plotting Earth relief
=====================

PyGMT provides the :func:`pygmt.datasets.load_earth_relief` function to download the
Earth relief data from the GMT remote server and load as an :class:`xarray.DataArray`
object. The data can then be plotted using the :meth:`pygmt.Figure.grdimage` method.

.. GENERATED FROM PYTHON SOURCE LINES 11-13

.. code-block:: Python

    import pygmt








.. GENERATED FROM PYTHON SOURCE LINES 14-16

Load sample Earth relief data for the entire globe at a resolution of 1 arc-degree.
Refer to :func:`pygmt.datasets.load_earth_relief` for the other available resolutions.

.. GENERATED FROM PYTHON SOURCE LINES 16-19

.. code-block:: Python

    grid = pygmt.datasets.load_earth_relief(resolution="01d")









.. GENERATED FROM PYTHON SOURCE LINES 20-27

Create a plot
-------------

The :meth:`pygmt.Figure.grdimage` method takes the ``grid`` input to create a figure.
It creates and applies a color palette to the figure based upon the z-values of the
data. By default, it plots the map with the *turbo* CPT, an equidistant cylindrical
projection, and with no frame.

.. GENERATED FROM PYTHON SOURCE LINES 27-32

.. code-block:: Python


    fig = pygmt.Figure()
    fig.grdimage(grid=grid)
    fig.show()




.. image-sg:: /tutorials/advanced/images/sphx_glr_earth_relief_001.png
   :alt: earth relief
   :srcset: /tutorials/advanced/images/sphx_glr_earth_relief_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 33-37

:meth:`pygmt.Figure.grdimage` can take the optional parameter ``projection`` for the
map. In the example below, ``projection`` is set to ``"R12c"`` for a
12-centimeters-wide figure with a Winkel Tripel projection. For a list of available
projections, see :doc:`/techref/projections`.

.. GENERATED FROM PYTHON SOURCE LINES 37-43

.. code-block:: Python


    fig = pygmt.Figure()
    fig.grdimage(grid=grid, projection="R12c")
    fig.show()





.. image-sg:: /tutorials/advanced/images/sphx_glr_earth_relief_002.png
   :alt: earth relief
   :srcset: /tutorials/advanced/images/sphx_glr_earth_relief_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 44-50

Set a color map
---------------

:meth:`pygmt.Figure.grdimage` takes the ``cmap`` parameter to set the CPT of the
figure. Examples of common CPTs for Earth relief are shown below. A full list of CPTs
can be found at :gmt-docs:`reference/cpts.html`.

.. GENERATED FROM PYTHON SOURCE LINES 52-53

Using the *geo* CPT:

.. GENERATED FROM PYTHON SOURCE LINES 53-58

.. code-block:: Python


    fig = pygmt.Figure()
    fig.grdimage(grid=grid, projection="R12c", cmap="geo")
    fig.show()




.. image-sg:: /tutorials/advanced/images/sphx_glr_earth_relief_003.png
   :alt: earth relief
   :srcset: /tutorials/advanced/images/sphx_glr_earth_relief_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 59-60

Using the *relief* CPT:

.. GENERATED FROM PYTHON SOURCE LINES 60-66

.. code-block:: Python


    fig = pygmt.Figure()
    fig.grdimage(grid=grid, projection="R12c", cmap="relief")
    fig.show()





.. image-sg:: /tutorials/advanced/images/sphx_glr_earth_relief_004.png
   :alt: earth relief
   :srcset: /tutorials/advanced/images/sphx_glr_earth_relief_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 67-77

Add a color bar
---------------

The :meth:`pygmt.Figure.colorbar` method displays the CPT and the associated z-values
of the figure, and by default uses the same CPT set by the ``cmap`` parameter for
:meth:`pygmt.Figure.grdimage`. The ``frame`` parameter for
:meth:`pygmt.Figure.colorbar` can be used to set the axis intervals and labels. A list
is used to pass multiple arguments to ``frame``. In the example below, ``"a2500"``
sets the axis interval to 2,500, ``"x+lElevation"`` sets the x-axis label, and
``"y+lm"`` sets the y-axis label.

.. GENERATED FROM PYTHON SOURCE LINES 77-84

.. code-block:: Python


    fig = pygmt.Figure()
    fig.grdimage(grid=grid, projection="R12c", cmap="geo")
    fig.colorbar(frame=["a2500", "x+lElevation", "y+lm"])
    fig.show()





.. image-sg:: /tutorials/advanced/images/sphx_glr_earth_relief_005.png
   :alt: earth relief
   :srcset: /tutorials/advanced/images/sphx_glr_earth_relief_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 85-96

Create a region map
-------------------

In addition to providing global data, the ``region`` parameter of
:func:`pygmt.datasets.load_earth_relief` can be used to provide data for a specific
area. The ``region`` parameter is required for resolutions at 5 arc-minutes or higher,
and accepts a list in the form of [*xmin*, *xmax*, *ymin*, *ymax*].

The example below uses data with a 10 arc-minutes resolution, and plots it on a
15-centimeters-wide figure with a Mercator projection and a CPT set to *geo*.
``frame="a"`` is used to add a frame with annotations to the figure.

.. GENERATED FROM PYTHON SOURCE LINES 96-103

.. code-block:: Python


    grid = pygmt.datasets.load_earth_relief(resolution="10m", region=[-14, 30, 35, 60])
    fig = pygmt.Figure()
    fig.grdimage(grid=grid, projection="M15c", frame="a", cmap="geo")
    fig.colorbar(frame=["a1000", "x+lElevation", "y+lm"])
    fig.show()




.. image-sg:: /tutorials/advanced/images/sphx_glr_earth_relief_006.png
   :alt: earth relief
   :srcset: /tutorials/advanced/images/sphx_glr_earth_relief_006.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.209 seconds)


.. _sphx_glr_download_tutorials_advanced_earth_relief.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: earth_relief.ipynb <earth_relief.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: earth_relief.py <earth_relief.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: earth_relief.zip <earth_relief.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
